--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,5 @@ services:
     env: python
     plan: free
     buildCommand: ""
-    startCommand: uvicorn fantasy_places:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn RandomPlaceGenerator:app --host 0.0.0.0 --port 10000
+
