--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,6 @@ services:
     name: fantasy-places-api
     env: python
     plan: free
+    autoDeploy: true        # active Auto-Deploy
     buildCommand: ""
     startCommand: uvicorn RandomPlaceGenerator:app --host 0.0.0.0 --port 10000
-
